--- a/pyproject.toml
+++ b/pyproject.toml
@@ -107,5 +107,8 @@ py-modules = [ "fastmcp_server", "main"]
 where = ["."]
 exclude = ["tests*", "docs*", "build", "dist"]
 
+[tool.pytest.ini_options]
+collect_ignore_glob = ["**/manual_test.py"]
+
 [tool.setuptools.package-data]
 core = ["tool_tiers.yaml"]
